Lab 2/ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: web-server
  labels:
    app: web-server
