Lab 2/helloworld-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: web-server
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: karthequian/helloworld:latest
        ports:
        - containerPort: 80
