Lab 2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: webserver-ingress
  namespace: web-server

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minikube.wbs.ru
      secretName: webserver-tls
  
  rules:
    - host: minikube.wbs.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver-service
                port:
                  number: 80
